# rustypot-python-bindings

./: Cargo.toml
.github/workflows/: CI.yml  rust.yml
python/: test_controller.py
src/: lib.rs
