[package]
name = "rustypot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustypot"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.3"
rustypot = { version = "0.6.0", path = "../rustypot" }
serialport = "4.7.0"
